CHANGES

  - global removal of [LastChanged]Version from POD; change VERSION svn declaration to ='0'; code action only on webinstall
  - some unused code removed
  - some small test scripts merged into related larger test scripts
  - VERSION variable and headers with SVN properties removed from test files
  - all test scripts are given .t extension 
  - unnecessary 'use' statements removed from tests

release 76.3
- use staging area for staging daemon logs

release 76.2
  - lims samplesheet driver bug fix - spiked phix tag index should be defined for plexes
  - method to return the name of the env. var for the cached samplesheet file
  - misleading xml lims driver POD entry fixed

release 76.1
  - use scratch110 for references as scratch109 is hanging
  - extend timeout for Jenkins auto-logout

release 76.0
 - added defaults for Perl indentation in Emacs for this repository
 - definition of the repository root for single nucleotide variation files
 - a new module defining rules for finding single nucleotide variation files
 - changes to the database schema and code to ensure compliance with sql
   strict mode, relevant changes to tests and test data
 - if batch_id is not supplied at run creation, enforce zero in the model,
     wider tests to be performed if NULL needs to be used
 - id_run_pair defaults to null; examining and setting this field removed
     from the code, the concept of run-pair has not been used for a long time
 - use ${JENKINS_HOME}/tmp instead of /tmp for jenkins tmpdir 
 - add perlcritic policy to prohibit tabs, convert tab to two white space, correct 
   indentation issues
 - old and unused apache configuration files removed
 - IL instruments removed from instrument utilisation menu (we do not have them any more)
 - instrument uptime menu link removed - target graph is broken
 - consolidated all instrument menu 70* tests in one 20 test
 - removed code repetition from bin/ga_II_checker