@@ -1,6 +1,7 @@
 CHANGES
 
-  - global removal of [LastChanged]Version from POD; change VERSION svn declaration to ='0'; code action only on webinstall
+  - code action on Build only if install target specified
+  - global removal of [LastChanged]Version from POD; change VERSION svn declaration to ='0';
   - some unused code removed
   - some small test scripts merged into related larger test scripts
   - VERSION variable and headers with SVN properties removed from test files
